all gaps fulfilled in booking
